refactor(el): Switch from select to poll for the TCP ConnectionManager

--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -126,10 +126,17 @@
 # ifndef _DEFAULT_SOURCE
 #  define _DEFAULT_SOURCE
 # endif
+
 /* On older systems we need to define _BSD_SOURCE.
  * _DEFAULT_SOURCE is an alias for that. */
 # ifndef _BSD_SOURCE
 #  define _BSD_SOURCE
+# endif
+
+/* Define _GNU_SOURCE to get functions like ppoll. Comment this out to
+ * only use standard POSIX definitions. */
+# ifndef _GNU_SOURCE
+#  define _GNU_SOURCE
 # endif
 #endif
 
