--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -35,6 +35,7 @@
 #cmakedefine UA_ENABLE_PUBSUB_INFORMATIONMODEL
 #cmakedefine UA_ENABLE_PUBSUB_INFORMATIONMODEL_METHODS
 #cmakedefine UA_ENABLE_DA
+#cmakedefine UA_ENABLE_DIAGNOSTICS
 #cmakedefine UA_ENABLE_HISTORIZING
 #cmakedefine UA_ENABLE_PARSING
 #cmakedefine UA_ENABLE_EXPERIMENTAL_HISTORIZING
