--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -51,11 +51,20 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/bin/exampl
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/bin/examples)
 
 macro(add_example EXAMPLE_NAME EXAMPLE_SOURCE)
-  add_executable(${EXAMPLE_NAME} ${STATIC_OBJECTS} ${EXAMPLE_SOURCE} ${ARGN} ${PROJECT_SOURCE_DIR}/common.h)
-  target_link_libraries(${EXAMPLE_NAME} open62541::open62541)
-  assign_source_group(${EXAMPLE_SOURCE})
-  set_target_properties(${EXAMPLE_NAME} PROPERTIES FOLDER "open62541/examples")
-  set_target_properties(${EXAMPLE_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+    add_executable(${EXAMPLE_NAME} ${STATIC_OBJECTS} ${EXAMPLE_SOURCE} ${ARGN} ${PROJECT_SOURCE_DIR}/common.h)
+    target_link_libraries(${EXAMPLE_NAME} open62541::open62541)
+    assign_source_group(${EXAMPLE_SOURCE})
+    set_target_properties(${EXAMPLE_NAME} PROPERTIES FOLDER "open62541/examples")
+    set_target_properties(${EXAMPLE_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+
+    if(UA_ENABLE_NODESET_INJECTOR)
+        set(UA_NODESETINJECTOR_EXAMPLE_NAMES ${EXAMPLE_NAME} ${UA_NODESETINJECTOR_EXAMPLE_NAMES})
+        # If the nodeset injector is activated, the target must be built twice.
+        # Otherwise, it may result in the nodesets not being inserted.
+        add_custom_command(TARGET ${EXAMPLE_NAME} POST_BUILD
+                           COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target ${EXAMPLE_NAME}
+                           )
+    endif()
 endmacro()
 
 #############
@@ -281,4 +290,10 @@ endif()
 ###########################
 if(UA_ENABLE_NODESETLOADER)
     add_subdirectory(nodeset_loader)
+endif()
+
+if(UA_ENABLE_NODESET_INJECTOR)
+    set(UA_NODESETINJECTOR_GENERATORS ${UA_NODESETINJECTOR_GENERATORS} PARENT_SCOPE)
+    set(UA_NODESETINJECTOR_SOURCE_FILES ${UA_NODESETINJECTOR_SOURCE_FILES} PARENT_SCOPE)
+    set(UA_NODESETINJECTOR_EXAMPLE_NAMES ${UA_NODESETINJECTOR_EXAMPLE_NAMES} PARENT_SCOPE)
 endif()
