--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -46,6 +46,8 @@
 #cmakedefine UA_ENABLE_MQTT_TLS
 #cmakedefine UA_ENABLE_MQTT_TLS_OPENSSL
 #cmakedefine UA_ENABLE_MQTT_TLS_MBEDTLS
+#cmakedefine UA_ENABLE_NODESET_INJECTOR
+#cmakedefine UA_INFORMATION_MODEL_AUTOLOAD
 #cmakedefine UA_ENABLE_ENCRYPTION_MBEDTLS
 #cmakedefine UA_ENABLE_CERT_REJECTED_DIR
 #cmakedefine UA_ENABLE_TPM2_SECURITY
