fix(ci): add m32 compile and linker options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1635,6 +1635,11 @@ if(NOT UA_ENABLE_AMALGAMATION)
     target_compile_definitions(open62541-plugins PUBLIC UA_ARCHITECTURE_${UA_ARCHITECTURE_UPPER})
 endif()
 
+if("${UA_ARCHITECTURE}" STREQUAL "win32")
+    target_compile_options ( open62541 PUBLIC -m32 )
+    set_target_properties ( open62541 PROPERTIES LINK_FLAGS -m32 )
+endif()
+
 # DLL requires linking to dependencies
 target_link_libraries(open62541 ${open62541_LIBRARIES})
 
