--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 	path = deps/ua-nodeset
 	url = https://github.com/OPCFoundation/UA-Nodeset
 	branch = latest
+[submodule "deps/mqtt-c"]
+	path = deps/mqtt-c
+	url = https://github.com/LiamBindle/MQTT-C.git
+	branch = master
