feat(server): Introduce DataSetMetaData, helpers and json encoding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1276,7 +1276,7 @@ else()
 
     if(UA_ENABLE_PUBSUB)
         list(APPEND UA_FILE_DATATYPES ${PROJECT_SOURCE_DIR}/tools/schema/datatypes_pubsub.txt)
-        if(UA_ENABLE_PUBSUB_INFORMATIONMODEL)
+        if(UA_ENABLE_PUBSUB_INFORMATIONMODEL OR UA_ENABLE_PUBSUB_MQTT_METADATA)
             list(APPEND UA_FILE_NODESETS ${PROJECT_SOURCE_DIR}/tools/schema/Opc.Ua.NodeSet2.PubSubMinimal.xml)
         endif()
     endif()
