--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -42,6 +42,7 @@
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS_EVENTS
 #cmakedefine UA_ENABLE_JSON_ENCODING
 #cmakedefine UA_ENABLE_PUBSUB_MQTT
+#cmakedefine UA_ENABLE_PUBSUB_MQTT_METADATA
 #cmakedefine UA_ENABLE_MQTT_TLS
 #cmakedefine UA_ENABLE_MQTT_TLS_OPENSSL
 #cmakedefine UA_ENABLE_MQTT_TLS_MBEDTLS
