fix: Missing compile switches

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -467,6 +467,9 @@ if(UA_ENABLE_PUBSUB_MQTT_METADATA)
     if(NOT UA_ENABLE_PUBSUB_MQTT)
         message(FATAL_ERROR "Publishing of Metadata via mqtt cannot be used without UA_ENABLE_PUBSUB_MQTT.")
     endif()
+    if(NOT UA_ENABLE_JSON_ENCODING)
+        message(WARNING "Publishing of Metadata via mqtt currently only supports json, but UA_ENABLE_JSON_ENCODING is not enabled.")
+    endif()
     set(UA_ENABLE_PUBSUB_MQTT_METADATA ON)
 endif()
 
