fix(nc): add --export-macro option to generate_datatypes.py
The –export-macro option is used to set the DLL export or import macro
dependent on the generation scope.

With the help of the –export-macro option the UA_EXPORT macro is only
used for the generated types included in the open62541 library.

E.g. in types_generated.h
"extern UA_EXPORT const UA_DataType UA_TYPES[UA_TYPES_COUNT];"

In the code generated by a user invocation of the nodeset compiler, the
user can freely choose the export macro, as the user DLL specifier may
conflict with the UA_EXPORT definitions if the open62541 is linked
dynamically in the user code.

E.g. user generated types:
"extern const UA_DataType UA_USERNAMESPACE_GEN_TYPES[UA_USERNAMESPACE_GEN_TYPES_COUNT];"
Or:
"extern USERNAMESPACE_EXPORT const UA_DataType UA_USERNAMESPACE_GEN_TYPES[UA_USERNAMESPACE_GEN_TYPES_COUNT];"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1275,6 +1275,7 @@ ua_generate_datatypes(
     NAME "types"
     TARGET_SUFFIX "types"
     NAMESPACE_IDX 0
+    EXPORT_MACRO "UA_EXPORT"
     FILE_CSV "${UA_FILE_NODEIDS}"
     FILES_BSD "${UA_FILE_TYPES_BSD}"
     FILES_SELECTED ${UA_FILE_DATATYPES}
@@ -1286,6 +1287,7 @@ ua_generate_datatypes(
     NAME "transport"
     TARGET_SUFFIX "transport"
     NAMESPACE_IDX 1
+    EXPORT_MACRO "UA_EXPORT"
     FILE_CSV "${UA_FILE_NODEIDS}"
     IMPORT_BSD "TYPES#${UA_FILE_TYPES_BSD}"
     FILES_BSD "${PROJECT_SOURCE_DIR}/tools/schema/Custom.Opc.Ua.Transport.bsd"
