fix: rt testcases use legacy udp

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -131,6 +131,8 @@ endif()
 if(UA_ENABLE_PUBSUB)
   list(APPEND test_plugin_sources
               ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_udp.c)
+  list(APPEND test_plugin_sources
+       ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_udp_legacy.c)
     if(UA_ENABLE_PUBSUB_ETH_UADP)
         list(APPEND test_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/include/open62541/plugin/pubsub_ethernet.h)
         list(APPEND test_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_ethernet.c)
