test(pubsub): Test publisherId support
Tested all publisherId types with different PubSub configurations.
Tested with fast-path and raw-encoding.

Note: fast-path does not work with multiple groups or
datasets. Therefore it wasn't tested and should be added
in the future.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -311,6 +311,7 @@ if(UA_ENABLE_PUBSUB)
     ua_add_test(pubsub/check_pubsub_publish.c)
     ua_add_test(pubsub/check_pubsub_publish_uadp.c)
     ua_add_test(pubsub/check_pubsub_get_state.c)
+    ua_add_test(pubsub/check_pubsub_publisherid.c)
 
     #Link libraries for executing subscriber unit test
     ua_add_test(pubsub/check_pubsub_subscribe.c)
