test(pubsub): add unit tests for GetSecurityKeys method node
The GetSecurityKeys method node must be tested for the use cases defined in
the Part 14. The unit tests are implemented for the following cases
  @testcases:
  - bad insufficient security mode
  - bad not found
  - bad user access denied
  - good and valid output
  - request current Token with future keys
  - request current Token without future Keys
  - request Past key
  - request unknown starting token id
  - request maxFutureKeys

Signed-off-by: Muddasir Shakil <muddasir.shakil@linutronix.de>
Reviewed-by: Kurt Kanzenbach <kurt@linutronix.de>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -321,6 +321,7 @@ if(UA_ENABLE_PUBSUB)
         if(UA_ENABLE_PUBSUB_SKS)
             ua_add_test(pubsub/check_pubsub_keystorage.c)
             ua_add_test(pubsub/check_pubsub_sks_push.c)
+            ua_add_test(pubsub/check_pubsub_sks_pull.c)
             ua_add_test(pubsub/check_pubsub_sks_securitygroups.c)
         endif()
     endif()
