add source to logging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1804,6 +1804,7 @@ endif()
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_CmakePredifinedTargets")
 
+set_property(TARGET open62541 PROPERTY C_STANDARD 11)
 set_target_properties(open62541 PROPERTIES FOLDER "open62541/lib")
 set_target_properties(open62541-object PROPERTIES FOLDER "open62541/lib")
 if(UA_ENABLE_AMALGAMATION)
